--- a/Index.html
+++ b/Index.html
@@ -110,8 +110,8 @@
      /* Existing styles... */
 
   #skills {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), 
-                      url('https://images.unsplash.com/photo-1581093458791-5c4ef4a1617b');
+background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), 
+                  url('https://raw.githubusercontent.com/valluripalli27/mine-/ef0cb1efbe239cfca1a7dc0880efee540ab079b8/skills.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
