--- a/Index.html
+++ b/Index.html
@@ -293,8 +293,8 @@ background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 
   </header>
   <main>
     <section id="hero">
-     <h2>Hello 👋 </h2>
-      <p> I'm Lakshmi Prasanna. Developer & UI/UX Designer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
+     <h2>👋 Lakshmi Prasanna</h2>
+      <p> UI/UX Designer & Developer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
     </section>
    
   <section id="skills">
